...
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                            <color key="textColor" name="TextPrimaryColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genres" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTr-08-Rgp">
                            <rect key="frame" x="10" y="91.333333333333314" width="353" height="20.333333333333329"/>
                            <accessibility key="accessibilityConfiguration" identifier="detailsGenresLabel"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <color key="textColor" name="TextTernaryColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2EV-OX-5OB">
                            <rect key="frame" x="10" y="131.66666666666669" width="353" height="150"/>
...
